# motor-control-kit

./: .gitignore  README.md  ros2_launcher.sh  ros2_tmux_launcher.sh  run_step_response.sh
encoded_dc_motor_bash_commands/: feedback-monitor-launcher.sh  hardware-interface-launcher.sh  lag-compensator-launcher.sh  velocity-command-launcher.sh
encoded_dc_motor_kit_PID/: CMakeLists.txt  README.md  package.xml
encoded_dc_motor_kit_PID/documentation/images/p_controller/: matlab.md  step_response_data.csv
encoded_dc_motor_kit_PID/documentation/images/pi_controller/: matlab.md  step_response_data.csv
encoded_dc_motor_kit_PID/src/: encoded_dc_motor_kit_2DOF_PID_controller.cpp  encoded_dc_motor_kit_PID_controller.cpp  encoded_dc_motor_kit_PID_controller_position.cpp  encoded_dc_motor_kit_PI_controller.cpp  encoded_dc_motor_kit_PI_controller_position.cpp  encoded_dc_motor_kit_P_controller.cpp  encoded_dc_motor_kit_P_controller_position.cpp  encoded_dc_motor_kit_lead_compensator.cpp
encoded_dc_motor_kit_adaptive_control/: CMakeLists.txt  package.xml
encoded_dc_motor_kit_arduino/: README.md
encoded_dc_motor_kit_arduino/hardware_interface_code/: hardware_interface_code.ino  hardware_interface_code_pendubot_control.ino
encoded_dc_motor_kit_compensator/: CMakeLists.txt  README.md  package.xml
encoded_dc_motor_kit_compensator/documentation/images/lag_compensator/: matlab_code.md  step_response_data.csv
encoded_dc_motor_kit_compensator/documentation/images/lag_compensator_position/: matlab.md
encoded_dc_motor_kit_compensator/documentation/images/lead_compensator/: Parameters.md  matlab_code.md  step_response_data.csv
encoded_dc_motor_kit_compensator/documentation/images/lead_compensator_position/: matlab.md
encoded_dc_motor_kit_compensator/documentation/images/lead_lag_compensator/: matlab_code.md  step_response_data.csv
encoded_dc_motor_kit_compensator/documentation/images/lead_lag_compensator_position/: matlab.md
encoded_dc_motor_kit_compensator/src/: encoded_dc_motor_kit_lag_compensator.cpp  encoded_dc_motor_kit_lag_compensator_position.cpp  encoded_dc_motor_kit_lead_compensator.cpp  encoded_dc_motor_kit_lead_compensator_position.cpp  encoded_dc_motor_kit_lead_lag_compensator.cpp  encoded_dc_motor_kit_lead_lag_compensator_position.cpp
encoded_dc_motor_kit_control/: README.md
encoded_dc_motor_kit_control/config/: controller.yaml
encoded_dc_motor_kit_control_and_feedback/: CMakeLists.txt  package.xml
encoded_dc_motor_kit_control_and_feedback/src/: velocity_feeback_and_topic_frequency.cpp  velocity_publisher.cpp
encoded_dc_motor_kit_data_proccessing/: package.xml  setup.cfg  setup.py
encoded_dc_motor_kit_description/: CMakeLists.txt  README.md  package.xml
encoded_dc_motor_kit_description/launch/: motor_kit_server.launch.py  robot_description.launch.py  rviz.launch.py  rviz_gui_test.launch.py
encoded_dc_motor_kit_description/rviz/: rviz_sim.rviz
encoded_dc_motor_kit_description/urdf/: encoded_dc_motor_kit.trans  encoded_dc_motor_kit.xacro  materials.xacro  ros2_control.xacro
encoded_dc_motor_kit_gui/: CMakeLists.txt
encoded_dc_motor_kit_gui/encoded_dc_motor_kit_gui/: velocity_publisher_gui.py  voltage_publisher_gui.py
encoded_dc_motor_kit_hardware_interface/: CMakeLists.txt  README.md  encoded_dc_motor_kit_hardware_interface.xml  package.xml
encoded_dc_motor_kit_hardware_interface/documentation_images/: ros2_esp_documentation.md
encoded_dc_motor_kit_hardware_interface/include/encoded_dc_motor_kit_hardware_interface/: hardware_interface.hpp  stop_and_wait.hpp
encoded_dc_motor_kit_hardware_interface/src/: hardware_interface.cpp  stop_and_wait.cpp
encoded_dc_motor_kit_kalman_filters/: CMakeLists.txt  README.md  package.xml
encoded_dc_motor_kit_kalman_filters/config/: bj_kalman.yaml
encoded_dc_motor_kit_kalman_filters/launch/: armax_kalman.launch.py  arx_kalman.launch.py  bj_kalman.launch.py
encoded_dc_motor_kit_kalman_filters/src/: shaft_velocity_filter.cpp  shaft_velocity_filter_armax.cpp  shaft_velocity_filter_bj.cpp
encoded_dc_motor_kit_model_predictive_control/: CMakeLists.txt  README.md  package.xml
encoded_dc_motor_kit_model_predictive_control/config/: model.yaml
encoded_dc_motor_kit_model_predictive_control/launch/: model_predictive_control.launch.py
encoded_dc_motor_kit_model_predictive_control/src/: model_predictive_control.cpp
encoded_dc_motor_kit_models/: CMakeLists.txt  package.xml
encoded_dc_motor_kit_models/src/: rviz_model_simulators.cpp
encoded_dc_motor_kit_response_analyzer/: Readme.md  package.xml  setup.cfg  setup.py
encoded_dc_motor_kit_response_analyzer/encoded_dc_motor_kit_response_analyzer/: prbs_signal_array_range_2.txt  step_response_analyzer.py  system_identification.py
encoded_dc_motor_kit_robust_control/: CMakeLists.txt  package.xml
encoded_dc_motor_kit_state_observers/: CMakeLists.txt  README.md  package.xml
encoded_dc_motor_kit_state_observers/src/: state_observer_armax.cpp
encoded_dc_motor_kit_state_space_controllers/: CMakeLists.txt  README.md  package.xml
encoded_dc_motor_kit_state_space_controllers/documentation/images/LQR_controller/: step_response_data.csv
encoded_dc_motor_kit_state_space_controllers/documentation/images/pole_placement_controller/: matlab.md  step_response_data.csv
encoded_dc_motor_kit_state_space_controllers/documentation/images/pole_placement_controller_position/: matlab.md
encoded_dc_motor_kit_state_space_controllers/src/: encoded_dc_motor_kit_LQR_controller.cpp  encoded_dc_motor_kit_pole_placement_controller.cpp  encoded_dc_motor_kit_pole_placement_controller_position.cpp
kalman/python_files/: alpha_beta_filter.py  alpha_beta_gamma_filter.py  alpha_filter.py  kalman_for_heating_liquid.py  kalman_intro.py  kalman_with_noise.py
ros2_motor_controller/: CMakeLists.txt  package.xml
ros2_motor_controller_msgs/: CMakeLists.txt  package.xml
ros2_motor_controller_msgs/msgs/: VelocityFeedback.msg
